Added all classes and items.

--- a/content/D2E/base/items.ini
+++ b/content/D2E/base/items.ini
@@ -1,201 +1,408 @@
-[ItemIronLongsword]
-name="Iron Longsword"
-image="../ffg/img/Item_IronLongsword.dds"
-; optional Minimum Fame for purchase (default 0)
-; optional Maximum Fame for purchase (default to -1, unlimited)
-traits=starting melee blade 1hand weapon
-
-[ItemWoodenShieldKnight]
-name="Wooden Shield"
-image="../ffg/img/Item_WoodenShield.dds"
-traits=starting shield 1hand
-
-[ItemWoodenShieldDisciple]
-name="Wooden Shield"
-image="../ffg/img/Item_WoodenShield.dds"
-traits=starting shield 1hand
-
 [ItemChippedGreataxe]
-name="Chipped Greataxe"
-image="../ffg/img/Item_Chipped Greataxe.dds"
-traits=starting melee axe 2hand weapon
+name={ffg:ITEM_CHIPPED_GREATAXE}
+image="../ffg/img/Item_Chipped Greataxe.png"
+traits=axe class
+minfame=insignificant
+maxfame=insignificant
+gold=25
+
+[ItemWoodenShield]
+name={ffg:ITEM_WOODEN_SHIELD}
+image="../ffg/img/Item_WoodenShield.png"
+traits=shield class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemIronMace]
-name="Iron Mace"
-image="../ffg/img/Item_Iron Mace.dds"
-traits=starting melee hammer 1hand weapon
+name={ffg:ITEM_IRON_MACE}
+image="../ffg/img/Item_Iron Mace.png"
+traits=hammer class
+minfame=insignificant
+maxfame=insignificant
+gold=25
+
+[ItemWoodenShield]
+name={ffg:ITEM_WOODEN_SHIELD}
+image="../ffg/img/Item_WoodenShield.png"
+traits=shield class
+minfame=insignificant
+maxfame=insignificant
+gold=25
+
+[ItemIronLongsword]
+name={ffg:ITEM_IRON_LONGSWORD}
+image="../ffg/img/Item_IronLongsword.png"
+traits=blade class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemOakStaff]
-name="Oak Staff"
-image="../ffg/img/Item_Oak Staff.dds"
-traits=starting melee staff 2hand weapon
-
-[ItemReapersScythe]
-name="Reaper's Scythe"
-image="../ffg/img/Item_Reaper's Scythe.dds"
-traits=starting ranged staff magic 2hand weapon
+name={ffg:ITEM_OAK_STAFF}
+image="../ffg/img/Item_Oak Staff.png"
+traits=staff class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemArcaneBolt]
-name="Arcane Bolt"
-image="../ffg/img/Item_Arcane Bolt.dds"
-traits=starting ranged rune magic 2hand weapon
+name={ffg:ITEM_ARCANE_BOLT}
+image="../ffg/img/Item_Arcane Bolt.png"
+traits=magic rune class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemThrowingKnives]
-name="Throwing Knives"
-image="../ffg/img/Item_Throwing Knives.dds"
-traits=starting ranged blade 1hand weapon
-
-[ItemLuckyCharmThief]
-name="Lucky Charm"
-image="../ffg/img/Item_Lucky Charm.dds"
-traits=starting trinket other
+[ItemReapersScythe]
+name={ffg:ITEM_REAPERS_SCYTHE}
+image="../ffg/img/Item_Reaper's Scythe.png"
+traits=staff magic class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemYewShortbow]
-name="Yew Shortbow"
-image="../ffg/img/Item_Yew Shortbow.dds"
-traits=starting ranged bow 2hand weapon
+name={ffg:ITEM_YEW_SHORTBOW}
+image="../ffg/img/Item_Yew Shortbow.png"
+traits=bow class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemSunburst]
-image="../ffg/img/Item_Sunburst.dds"
-act=1
-price=125
-traits=shop ranged magic rune 2hand weapon
-
-[ItemIronSpear]
-name="Iron Spear"
-image="../ffg/img/Item_Iron Spear.dds"
-act=1
-price=75
-traits=shop melee exotic 1hand weapon
-
-[ItemElmGreatbow]
-name="Elm Greatbow"
-image="../ffg/img/Item_Elm Greatbow.dds"
-act=1
-price=100
-traits=shop ranged bow 2hand weapon
-
-[ItemChainmail]
-image="../ffg/img/Item_Chainmail.dds"
-act=1
-price=150
-traits=shop heavyarmor armor
-
-[ItemImmolation]
-image="../ffg/img/Item_Immolation.dds"
-act=1
-price=150
-traits=shop ranged magic rune 2hand weapon
+[ItemThrowingKnives]
+name={ffg:ITEM_THROWING_KNIVES}
+image="../ffg/img/Item_Throwing Knives.png"
+traits=blade class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemLuckyCharm]
-name="Lucky Charm"
-image="../ffg/img/Item_Lucky Charm.dds"
-act=1
-price=100
-traits=shop trinket other
-
-[ItemLightHammer]
-name="Light Hammer"
-image="../ffg/img/Item_Light Hammer.dds"
-act=1
-price=75
-traits=shop melee hammer 1hand weapon
-
-[ItemSling]
-image="../ffg/img/Item_Sling.dds"
-act=1
-price=75
-traits=shop ranged exotic 1hand weapon
-
-[ItemIronBattleaxe]
-name="Iron Battleaxe"
-image="../ffg/img/Item_Iron Battleaxe.dds"
-act=1
-price=100
-traits=shop melee axe 2hand weapon
-
-[ItemSteelBroadsword]
-name="Steel Broadsword"
-image="../ffg/img/Item_Steel Broadsword.dds"
-act=1
-price=75
-traits=shop melee blade 1hand weapon
-
-[ItemManaWeave]
-name="Mana Weave"
-image="../ffg/img/Item_Mana Weave.dds"
-act=1
-price=125
-traits=shop rune other
+name={ffg:ITEM_LUCKY_CHARM}
+image="../ffg/img/Item_Lucky Charm.png"
+traits=trinket class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemLeatherArmor]
-name="Leather Armor"
-image="../ffg/img/Item_Leather Armor.dds"
-act=1
-price=75
-traits=shop lightarmor armor
+name={ffg:ITEM_LEATHER_ARMOR}
+image="../ffg/img/Item_Leather Armor.png"
+traits=armor light_armor act1
+minfame=insignificant
+maxfame=noteworthy
+gold=75
 
-[ItemScorpionHelm]
-name="Scorpion Helm"
-image="../ffg/img/Item_Scorpion Helm.dds"
-act=1
-price=75
-traits=shop helmet other
+[ItemLeatherArmor]
+name={ffg:ITEM_LEATHER_ARMOR}
+image="../ffg/img/Item_Leather Armor.png"
+traits=armor light_armor act1
+minfame=insignificant
+maxfame=noteworthy
+gold=75
 
-[ItemHeavyCloak]
-name="Heavy Cloak"
-image="../ffg/img/Item_Heavy Cloak.dds"
-act=1
-price=75
-traits=shop cloak armor
+[ItemSteelBroadsword]
+name={ffg:ITEM_STEEL_BROADSWORD}
+image="../ffg/img/Item_Steel Broadsword.png"
+traits=melee one_handed blade act1
+minfame=insignificant
+maxfame=impressive
+gold=75
 
-[ItemMagicStaff]
-name="Magic Staff"
-image="../ffg/img/Item_Magic Staff.dds"
-act=1
-price=125
-traits=shop ranged magic staff 2hand weapon
+[ItemCrossbow]
+name={ffg:ITEM_CROSSBOW}
+image="../ffg/img/Item_Crossbow.png"
+traits=ranged one_handed bow exotic act1
+minfame=impressive
+maxfame=celebrated
+gold=175
+
+[ItemIronBattleaxe]
+name={ffg:ITEM_IRON_BATTLEAXE}
+image="../ffg/img/Item_Iron Battleaxe.png"
+traits=melee one_handed axe act1
+minfame=insignificant
+maxfame=impressive
+gold=100
+
+[ItemLightHammer]
+name={ffg:ITEM_LIGHT_HAMMER}
+image="../ffg/img/Item_Light Hammer.png"
+traits=melee one_handed hammer act1
+minfame=insignificant
+maxfame=impressive
+gold=75
 
 [ItemIronShield]
-name="Iron Shield"
-image="../ffg/img/Item_Iron Shield.dds"
-act=1
-price=50
-traits=shop shield 1hand
+name={ffg:ITEM_IRON_SHIELD}
+image="../ffg/img/Item_Iron Shield.png"
+traits=one_handed shield act1
+minfame=insignificant
+maxfame=noteworthy
+gold=50
+
+[ItemIronShield2]
+name={ffg:ITEM_IRON_SHIELD_2}
+image="../ffg/img/Item_Iron Shield.png"
+traits=one_handed shield act1
+minfame=insignificant
+maxfame=noteworthy
+gold=50
+
+[ItemIronSpear]
+name={ffg:ITEM_IRON_SPEAR}
+image="../ffg/img/Item_Iron Spear.png"
+traits=melee one_handed exotic act1
+minfame=insignificant
+maxfame=impressive
+gold=75
+
+[ItemSunburst]
+name={ffg:ITEM_SUNBURST}
+image="../ffg/img/Item_Sunburst.png"
+traits=ranged two_handed magic rune act1
+minfame=insignificant
+maxfame=impressive
+gold=125
+
+[ItemElmGreatbow]
+name={ffg:ITEM_ELM_GREATBOW}
+image="../ffg/img/Item_Elm Greatbow.png"
+traits=ranged two_handed bow act1
+minfame=insignificant
+maxfame=impressive
+gold=100
+
+[ItemMagicStaff]
+name={ffg:ITEM_MAGIC_STAFF}
+image="../ffg/img/Item_Magic Staff.png"
+traits=ranged two_handed staff magic act1
+minfame=insignificant
+maxfame=insignificant
+gold=125
+
+[ItemRingOfPower]
+name={ffg:ITEM_RING_OF_POWER}
+image="../ffg/img/Item_Ring of Power.png"
+traits=other ring act1
+minfame=impressive
+maxfame=legendary
+gold=150
+
+[ItemLuckyCharm]
+name={ffg:ITEM_LUCKY_CHARM}
+image="../ffg/img/Item_Lucky Charm.png"
+traits=other trinket act1
+minfame=insignificant
+maxfame=legendary
+gold=100
+
+[ItemHeavyCloak]
+name={ffg:ITEM_HEAVY_CLOAK}
+image="../ffg/img/Item_Heavy Cloak.png"
+traits=armor cloak act1
+minfame=insignificant
+maxfame=impressive
+gold=75
+
+[ItemChainmail]
+name={ffg:ITEM_CHAINMAIL}
+image="../ffg/img/Item_Chainmail.png"
+traits=armor heavy_armor act1
+minfame=noteworthy
+maxfame=impressive
+gold=150
+
+[ItemSling]
+name={ffg:ITEM_SLING}
+image="../ffg/img/Item_Sling.png"
+traits=ranged one_handed exotic act1
+minfame=insignificant
+maxfame=impressive
+gold=75
+
+[ItemImmolation]
+name={ffg:ITEM_IMMOLATION}
+image="../ffg/img/Item_Immolation.png"
+traits=ranged two_handed magic rune act1
+minfame=noteworthy
+maxfame=impressive
+gold=150
+
+[ItemScorpionHelm]
+name={ffg:ITEM_SCORPION_HELM}
+image="../ffg/img/Item_Scorpion Helm.png"
+traits=other helmet act1
+minfame=insignificant
+maxfame=impressive
+gold=75
+
+[ItemManaWeave]
+name={ffg:ITEM_MANA_WEAVE}
+image="../ffg/img/Item_Mana Weave.png"
+traits=other rune act1
+minfame=noteworthy
+maxfame=legendary
+gold=125
+
+[ItemDemonhideLeather]
+name={ffg:ITEM_DEMONHIDE_LEATHER}
+image="../ffg/img/Item_Demonhide Leather.png"
+traits=armor light_armor act2
+minfame=impressive
+maxfame=heroic
+gold=200
+
+[ItemElvenCloak]
+name={ffg:ITEM_ELVEN_CLOAK}
+image="../ffg/img/Item_Elven Cloak.png"
+traits=armor cloak act2
+minfame=celebrated
+maxfame=legendary
+gold=225
+
+[ItemIceStorm]
+name={ffg:ITEM_ICE_STORM}
+image="../ffg/img/Item_Ice Storm.png"
+traits=ranged two_handed magic rune act2
+minfame=celebrated
+maxfame=legendary
+gold=150
+
+[ItemSteelGreatsword]
+name={ffg:ITEM_STEEL_GREATSWORD}
+image="../ffg/img/Item_Steel Greatsword.png"
+traits=melee two_handed blade act2
+minfame=celebrated
+maxfame=legendary
+gold=175
+
+[ItemDwarvenFirebomb]
+name={ffg:ITEM_DWARVEN_FIREBOMB}
+image="../ffg/img/Item_DwarvenFirebomb.png"
+traits=ranged one_handed exotic act2
+minfame=celebrated
+maxfame=legendary
+gold=175
+
+[ItemDragontoothHammer]
+name={ffg:ITEM_DRAGONTOOTH_HAMMER}
+image="../ffg/img/Item_Dragontooth Hammer.png"
+traits=melee two_handed hammer act2
+minfame=heroic
+maxfame=legendary
+gold=250
+
+[ItemIronBoundRing]
+name={ffg:ITEM_IRON_BOUND_RING}
+image="../ffg/img/Item_Iron-Bound Ring.png"
+traits=other ring act2
+minfame=impressive
+maxfame=heroic
+gold=125
 
 [ItemTivalCrystal]
-name="Tival Crystal"
-image="../ffg/img/Item_Tival Crystal.dds"
-act=2
-price=25
-traits=shop trinket other
+name={ffg:ITEM_TIVAL_CRYSTAL}
+image="../ffg/img/Item_Tival Crystal.png"
+traits=other trinket act2
+minfame=noteworthy
+maxfame=celebrated
+gold=25
 
-[ItemDawnblade]
-name="Dawnblade"
-image="../ffg/img/Item_Dawnblade.dds"
-traits=relic melee blade 1hand weapon
+[ItemGrindingAxe]
+name={ffg:ITEM_GRINDING_AXE}
+image="../ffg/img/Item_Grinding Axe.png"
+traits=melee two_handed axe act2
+minfame=legendary
+maxfame=legendary
+gold=200
 
-[ItemFortunasDice]
-name="Fortuna's Dice"
-image="../ffg/img/Item_Fortuna's Dice.dds"
-traits=relic other trinket
+[ItemLightningStrike]
+name={ffg:ITEM_LIGHTNING_STRIKE}
+image="../ffg/img/Item_Lightning Strike.png"
+traits=ranged two_handed magic rune act2
+minfame=heroic
+maxfame=legendary
+gold=200
 
-[ItemShieldOfTheDarkGod]
-name="Shield of the Dark God"
-image="../ffg/img/Item_Shield of the Dark God.dds"
-traits=relic shield 1hand
+[ItemMaceOfKellos]
+name={ffg:ITEM_MACE_OF_KELLOS}
+image="../ffg/img/Item_Mace of Kellos.png"
+traits=melee one_handed hammer act2
+minfame=celebrated
+maxfame=legendary
+gold=175
 
-[ItemStaffOfLight]
-name="Staff of Light"
-image="../ffg/img/Item_Staff of Light.dds"
-traits=relic ranged magic staff 2hand weapon
+[ItemLatariLongbow]
+name={ffg:ITEM_LATARI_LONGBOW}
+image="../ffg/img/Item_Latari Longbow.png"
+traits=ranged two_handed bow act2
+minfame=celebrated
+maxfame=heroic
+gold=200
 
-[ItemTheShadowRune]
-name="The Shadow Rune"
-image="../ffg/img/Item_The Shadow Rune.dds"
-traits=relic ranged magic rune 2hand weapon
+[ItemPlatemail]
+name={ffg:ITEM_PLATEMAIL}
+image="../ffg/img/Item_Platemail.png"
+traits=armor heavy_armor act2
+minfame=celebrated
+maxfame=legendary
+gold=250
 
-[ItemTrueshot]
-name="Trueshot"
-image="../ffg/img/Item_Trueshot.dds"
-traits=relic ranged bow 2hand weapon
+[ItemHeavySteelShield]
+name={ffg:ITEM_HEAVY_STEEL_SHIELD}
+image="../ffg/img/Item_Heavy Steel Shield.png"
+traits=one_handed shield act2
+minfame=celebrated
+maxfame=legendary
+gold=100
+
+[RelicDawnblade]
+name={ffg:RELIC_DAWNBLADE}
+image="../ffg/img/Item_Dawnblade.png"
+traits=blade relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicFortunasDice]
+name={ffg:RELIC_FORTUNAS_DICE}
+image="../ffg/img/Item_Fortuna's Dice.png"
+traits=trinket relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicShieldOfTheDarkGod]
+name={ffg:RELIC_SHIELD_OF_THE_DARK_GOD}
+image="../ffg/img/Item_Shield of the Dark God.png"
+traits=shield relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicStaffOfLight]
+name={ffg:RELIC_STAFF_OF_LIGHT}
+image="../ffg/img/Item_Staff of Light.png"
+traits=staff magic relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicTheShadowRune]
+name={ffg:RELIC_THE_SHADOW_RUNE}
+image="../ffg/img/Item_The Shadow Rune.png"
+traits=magic rune relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicTrueshot]
+name={ffg:RELIC_TRUESHOT}
+image="../ffg/img/Item_Trueshot.png"
+traits=bow relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
