--- a/content/D2E/boxed/lotw/items.ini
+++ b/content/D2E/boxed/lotw/items.ini
@@ -1,87 +1,113 @@
-[ItemHornOfCourage]
-name="Horn of Courage"
-image="../ffg/img/Item_Horn of Courage.dds"
-traits=starting trinket other
-
-[ItemWornGreatsword]
-name="Worn Greatsword"
-image="../ffg/img/Item_Worn Greatsword.dds"
-traits=starting melee blade 2hand weapon
 
 [ItemStasisRune]
-name="Stasis Rune"
-image="../ffg/img/Item_Stasis Rune.dds"
-traits=starting ranged magic rune 2hand weapon
+name={ffg:ITEM_STASIS_RUNE}
+image="../../ffg/img/Item_Stasis Rune.png"
+traits=magic rune class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemHalberd]
-name="Halberd"
-image="../ffg/img/Item_Halberd.dds"
-act=1
-price=125
-traits=shop melee blade staff 2hand weapon
+[ItemWornGreatsword]
+name={ffg:ITEM_WORN_GREATSWORD}
+image="../../ffg/img/Item_Worn Greatsword.png"
+traits=blade class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemHandbow]
-name="Handbow"
-image="../ffg/img/Item_Handbow.dds"
-act=1
-price=150
-traits=shop ranged bow exotic other weapon
-
-[ItemMagmaBlast]
-name="Magma Blast"
-image="../ffg/img/Item_Magma Blast.dds"
-act=1
-price=150
-traits=shop ranged magic rune 2hand weapon
-
-[ItemFlashPowder]
-name="Flash Powder"
-image="../ffg/img/Item_Flash Powder.dds"
-act=1
-price=100
-traits=shop trinket other
+[ItemHornOfCourage]
+name={ffg:ITEM_HORN_OF_COURAGE}
+image="../../ffg/img/Item_Horn of Courage.png"
+traits=trinket class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemScalemail]
-name="Scalemail"
-image="../ffg/img/Item_Scalemail.dds"
-act=2
-price=225
-traits=shop heavyarmor armor
-
-[ItemBowOfTheSky]
-name="Bow of the Sky"
-image="../ffg/img/Item_Bow of the Sky.dds"
-act=2
-price=225
-traits=shop ranged bow 2hand weapon
+name={ffg:ITEM_SCALEMAIL}
+image="../../ffg/img/Item_Scalemail.png"
+traits=armor heavy_armor act2
+minfame=celebrated
+maxfame=legendary
+gold=225
 
 [ItemMercifulBoots]
-name="Merciful Boots"
-image="../ffg/img/Item_Merciful Boots.dds"
-act=2
-price=100
-traits=shop boots other
+name={ffg:ITEM_MERCIFUL_BOOTS}
+image="../../ffg/img/Item_Merciful Boots.png"
+traits=other boots act2
+minfame=impressive
+maxfame=legendary
+gold=75
+
+[ItemBowOfTheSky]
+name={ffg:ITEM_BOW_OF_THE_SKY}
+image="../../ffg/img/Item_Bow of the Sky.png"
+traits=ranged two_handed bow act2
+minfame=celebrated
+maxfame=legendary
+gold=200
 
 [ItemInscribedRobes]
-name="Inscribed Robes"
-image="../ffg/img/Item_Inscribed Robes.dds"
-act=2
-price=225
-traits=shop cloak armor
+name={ffg:ITEM_INSCRIBED_ROBES}
+image="../../ffg/img/Item_Inscribed Robes.png"
+traits=armor cloak act2
+minfame=celebrated
+maxfame=legendary
+gold=225
 
 [ItemStaffOfKellos]
-name="Staff of Kellos"
-image="../ffg/img/Item_Staff of Kellos.dds"
-act=2
-price=175
-traits=shop ranged magic staff 2hand weapon
+name={ffg:ITEM_STAFF_OF_KELLOS}
+image="../../ffg/img/Item_Staff of Kellos.png"
+traits=ranged two_handed staff magic act2
+minfame=celebrated
+maxfame=legendary
+gold=175
 
-[ItemAuriumMail]
-name="Aurium Mail"
-image="../ffg/img/Item_Aurium Mail.dds"
-traits=relic heavyarmor armor
+[ItemMagmaBlast]
+name={ffg:ITEM_MAGMA_BLAST}
+image="../../ffg/img/Item_Magma Blast.png"
+traits=ranged two_handed magic rune act1
+minfame=noteworthy
+maxfame=celebrated
+gold=150
 
-[ItemValyndrasBane]
-name="Valyndra's Bane"
-image="../ffg/img/Item_Valyndra's Bane.dds'"
-traits=relic melee blade 2hand weapon
+[ItemFlashPowder]
+name={ffg:ITEM_FLASH_POWDER}
+image="../../ffg/img/Item_Flash Powder.png"
+traits=other trinket act1
+minfame=noteworthy
+maxfame=heroic
+gold=100
+
+[ItemHandbow]
+name={ffg:ITEM_HANDBOW}
+image="../../ffg/img/Item_Handbow.png"
+traits=ranged other bow exotic act1
+minfame=noteworthy
+maxfame=impressive
+gold=125
+
+[ItemHalberd]
+name={ffg:ITEM_HALBERD}
+image="../../ffg/img/Item_Halberd.png"
+traits=melee two_handed blade staff act1
+minfame=insignificant
+maxfame=impressive
+gold=125
+
+[RelicAuriumMail]
+name={ffg:RELIC_AURIUM_MAIL}
+image="../../ffg/img/Item_Aurium Mail.png"
+traits=heavy_armor relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicValyndrasBane]
+name={ffg:RELIC_VALYNDRAS_BANE}
+image="../../ffg/img/Item_Valyndra's Bane.png"
+traits=blade relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
