--- a/content/D2E/boxed/mob/items.ini
+++ b/content/D2E/boxed/mob/items.ini
@@ -1,70 +1,88 @@
-[ItemBattleTome]
-name="Battle Tome"
-image="../ffg/img/Item_Battle Tome.dds"
-act=1
-price=125
-traits=shop ranged book magic 1hand weapon
-
-[ItemBloodscript Ring]
-name="Bloodscript Ring"
-image="../ffg/img/Item_Bloodscript Ring.dds"
-act=1
-price=75
-traits=shop ring other
+[ItemMistbane]
+name={ffg:ITEM_MISTBANE}
+image="../../ffg/img/Item_Mistbane.png"
+traits=melee one_handed blade act1
+minfame=noteworthy
+maxfame=impressive
+gold=100
 
 [ItemCorpsebugBrooch]
-name="Corpsebug Brooch"
-image="../ffg/img/Item_Corpsebug Brooch.dds"
-act=1
-price=75
-traits=shop trinket other
-
-[ItemMarshCloak]
-name="Marsh Cloak"
-image="../ffg/img/Item_Marsh Cloak.dds"
-act=1
-price=150
-traits=shop cloak armor
-
-[ItemMistbane]
-name="Mistbane"
-image="../ffg/img/Item_Mistbane.dds"
-act=1
-price=100
-traits=shop melee blade 1hand weapon
-
-[ItemSoulbound Sword]
-name="Soulbound Sword"
-image="../ffg/img/Item_Soulbound Sword.dds"
-act=1
-price=100
-traits=shop melee blade 2hand weapon
+name={ffg:ITEM_CORPSEBUG_BROOCH}
+image="../../ffg/img/Item_Corpsebug Brooch.png"
+traits=other trinket act1
+minfame=noteworthy
+maxfame=heroic
+gold=75
 
 [ItemSoulstone]
-name="Soulstone"
-image="../ffg/img/Item_Soulstone.dds"
-act=1
-price=125
-traits=shop ranged magic rune 2hand weapon
+name={ffg:ITEM_SOULSTONE}
+image="../../ffg/img/Item_Soulstone.png"
+traits=ranged two_handed magic rune act1
+minfame=noteworthy
+maxfame=celebrated
+gold=125
+
+[ItemBloodscriptRing]
+name={ffg:ITEM_BLOODSCRIPT_RING}
+image="../../ffg/img/Item_Bloodscript Ring.png"
+traits=other ring act1
+minfame=insignificant
+maxfame=celebrated
+gold=75
 
 [ItemWitchHazelBow]
-name="Witch Hazel Bow"
-image="../ffg/img/Item_Witch Hazel Bow.dds"
-act=1
-price=125
-traits=shop ranged bow magic 2hand weapon
+name={ffg:ITEM_WITCH_HAZEL_BOW}
+image="../../ffg/img/Item_Witch Hazel Bow.png"
+traits=ranged two_handed bow magic act1
+minfame=noteworthy
+maxfame=impressive
+gold=125
 
-[ItemFearEater]
-name="Fear Eater"
-image="../ffg/img/Item_Fear Eater.dds"
-traits=relic melee blade 2hand weapon
+[ItemMarshCloak]
+name={ffg:ITEM_MARSH_CLOAK}
+image="../../ffg/img/Item_Marsh Cloak.png"
+traits=armor cloak act1
+minfame=impressive
+maxfame=heroic
+gold=150
 
-[ItemUndertakersCoat]
-name="Undertaker's Coat"
-image="../ffg/img/Item_Undertaker's Coat.dds"
-traits=relic lightarmor armor
+[ItemBattleTome]
+name={ffg:ITEM_BATTLE_TOME}
+image="../../ffg/img/Item_Battle Tome.png"
+traits=ranged one_handed magic book act1
+minfame=noteworthy
+maxfame=celebrated
+gold=125
 
-[ItemTheWhiteCrown]
-name="The White Crown"
-image="../ffg/img/Item_The White Crown.dds"
-traits=relic helmet other
+[ItemSoulboundSword]
+name={ffg:ITEM_SOULBOUND_SWORD}
+image="../../ffg/img/Item_Soulbound Sword.png"
+traits=melee two_handed blade act1
+minfame=impressive
+maxfame=celebrated
+gold=100
+
+[RelicFearEater]
+name={ffg:RELIC_FEAR_EATER}
+image="../../ffg/img/Item_Fear Eater.png"
+traits=blade relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicUndertakersCoat]
+name={ffg:RELIC_UNDERTAKERS_COAT}
+image="../../ffg/img/Item_Undertaker's Coat.png"
+traits=relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicTheWhiteCrown]
+name={ffg:RELIC_THE_WHITE_CROWN}
+image="../../ffg/img/Item_The White Crown.png"
+traits=helmet relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
