--- a/content/D2E/boxed/son/items.ini
+++ b/content/D2E/boxed/son/items.ini
@@ -1,196 +1,240 @@
-[ItemPrismaticStaff]
-name="Prismatic Staff"
-image="../ffg/img/Item_Prismatic Staff.dds"
-traits=starting ranged magic staff 2hand weapon
-
-[ItemFeatheredHatchet]
-name="Feathered Hatchet"
-image="../ffg/img/Item_Feathered Hatchet.dds"
-traits=starting ranged axe exotic 1hand weapon
-
-[ItemTribalCloak]
-name="Tribal Cloak"
-image="../ffg/img/Item_Tribal Cloak.dds"
-traits=starting cloak armor
+[ItemTravelersBlade]
+name={ffg:ITEM_TRAVELERS_BLADE}
+image="../../ffg/img/Item_Traveler's Blade.png"
+traits=blade class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemLute]
-name="Lute"
-image="../ffg/img/Item_Lute.dds"
-traits=starting trinket other
+name={ffg:ITEM_LUTE}
+image="../../ffg/img/Item_Lute.png"
+traits=trinket class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemTravelersBlade]
-name="Traveler's Blade"
-image="../ffg/img/Item_Traveler's Blade.dds'"
-traits=starting melee blade 1hand weapon
+[ItemPrismaticStaff]
+name={ffg:ITEM_PRISMATIC_STAFF}
+image="../../ffg/img/Item_Prismatic Staff.png"
+traits=staff magic class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemJaggedHandaxe]
-name="Jagged Handaxe"
-image="../ffg/img/Item_Jagged Handaxe.dds"
-traits=starting melee axe 1hand weapon
+[ItemFeatheredHatchet]
+name={ffg:ITEM_FEATHERED_HATCHET}
+image="../../ffg/img/Item_Feathered Hatchet.png"
+traits=axe exotic class
+minfame=insignificant
+maxfame=insignificant
+gold=25
+
+[ItemTribalCloak]
+name={ffg:ITEM_TRIBAL_CLOAK}
+image="../../ffg/img/Item_Tribal Cloak.png"
+traits=cloak class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemRustedHandaxe]
-name="Rusted Handaxe"
-image="../ffg/img/Item_Rusted Handaxe.dds"
-traits=starting melee axe 1hand weapon
+name={ffg:ITEM_RUSTED_HANDAXE}
+image="../../ffg/img/Item_Rusted Handaxe.png"
+traits=axe class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemJeweledMace]
-name="Jeweled Mace"
-image="../ffg/img/Item_Jeweled Mace.dds"
-act=1
-price=100
-traits=shop melee hammer 1hand weapon
+[ItemJaggedHandaxe]
+name={ffg:ITEM_JAGGED_HANDAXE}
+image="../../ffg/img/Item_Jagged Handaxe.png"
+traits=axe class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemIncendiaryArrows]
-name="Incendiary Arrows"
-image="../ffg/img/Item_Incendiary Arrows.dds"
-act=1
-price=75
-traits=shop trinket other
-
-[ItemPhoenixPendant]
-name="Poenix Pendant"
-image="../ffg/img/Item_Phoenix Pendant.dds"
-act=1
-price=50
-traits=shop trinket other
-
-[ItemBoneBlade]
-name="Bone Blade"
-image="../ffg/img/Item_Bone Blade.dds"
-act=1
-price=125
-traits=shop melee blade 1hand weapon
-
-[ItemCityGuardsBow]
-name="City Guard's Bow"
-image="../ffg/img/Item_City Guard's Bow.dds"
-act=1
-price=75
-traits=shop ranged bow 2hand weapon
-
-[ItemBootsOfIron]
-name="Boots of Iron"
-image="../ffg/img/Item_Boots of Iron.dds"
-act=1
-price=50
-traits=shop boots other
-
-[ItemCloakOfMists]
-name="Cloak of Mists"
-image="../ffg/img/Item_Cloak of Mists.dds"
-act=1
-price=100
-traits=shop cloak armor
-
-[ItemArchaicScroll]
-name="Archaic Scroll"
-image="../ffg/img/Item_Archaic Scroll.dds"
-act=1
-price=25
-traits=shop trinket other
-
-[ItemBloodyDagger]
-name="Bloody Dagger"
-image="../ffg/img/Item_Bloody Dagger.dds"
-act=1
-price=75
-traits=shop melee blade 1hand weapon
+name={ffg:ITEM_INCENDIARY_ARROWS}
+image="../../ffg/img/Item_Incendiary Arrows.png"
+traits=other trinket act1
+minfame=noteworthy
+maxfame=celebrated
+gold=50
 
 [ItemIronboundRune]
-name="Ironbound Rune"
-image="../ffg/img/Item_Ironbound Rune.dds"
-act=1
-price=175
-traits=shop ranged magic rune 2hand weapon
+name={ffg:ITEM_IRONBOUND_RUNE}
+image="../../ffg/img/Item_Ironbound Rune.png"
+traits=ranged two_handed magic rune act1
+minfame=insignificant
+maxfame=impressive
+gold=175
+
+[ItemBootsOfIron]
+name={ffg:ITEM_BOOTS_OF_IRON}
+image="../../ffg/img/Item_Boots of Iron.png"
+traits=other boots act1
+minfame=insignificant
+maxfame=impressive
+gold=50
 
 [ItemBaronsCloak]
-name="Baron's Cloak"
-image="../ffg/img/Item_Baron's Cloak.dds"
-act=1
-price=125
-traits=shop cloak armor
+name={ffg:ITEM_BARONS_CLOAK}
+image="../../ffg/img/Item_Baron's Cloak.png"
+traits=armor cloak act1
+minfame=noteworthy
+maxfame=celebrated
+gold=125
+
+[ItemJeweledMace]
+name={ffg:ITEM_JEWELED_MACE}
+image="../../ffg/img/Item_Jeweled Mace.png"
+traits=melee one_handed hammer act1
+minfame=insignificant
+maxfame=impressive
+gold=100
+
+[ItemPhoenixPendant]
+name={ffg:ITEM_PHOENIX_PENDANT}
+image="../../ffg/img/Item_Phoenix Pendant.png"
+traits=other trinket act1
+minfame=insignificant
+maxfame=celebrated
+gold=50
+
+[ItemBloodyDagger]
+name={ffg:ITEM_BLOODY_DAGGER}
+image="../../ffg/img/Item_Bloody Dagger.png"
+traits=melee one_handed blade act1
+minfame=noteworthy
+maxfame=celebrated
+gold=75
+
+[ItemBoneBlade]
+name={ffg:ITEM_BONE_BLADE}
+image="../../ffg/img/Item_Bone Blade.png"
+traits=melee one_handed blade act1
+minfame=noteworthy
+maxfame=celebrated
+gold=125
+
+[ItemCityGuardsBow]
+name={ffg:ITEM_CITY_GUARDS_BOW}
+image="../../ffg/img/Item_City Guard's Bow.png"
+traits=ranged two_handed bow act1
+minfame=insignificant
+maxfame=impressive
+gold=75
+
+[ItemCloakOfMists]
+name={ffg:ITEM_CLOAK_OF_MISTS}
+image="../../ffg/img/Item_Cloak of Mists.png"
+traits=armor cloak act1
+minfame=impressive
+maxfame=heroic
+gold=100
 
 [ItemIronboundShield]
-name="Ironbound Shield"
-image="../ffg/img/Item_IronboundShield.dds"
-act=2
-price=200
-traits=shop shield 1hand
-
-[ItemShadowTome]
-name="Shadow Tome"
-image="../ffg/img/Item_Shadow Tome.dds"
-act=2
-price=75
-traits=shop book other
+name={ffg:ITEM_IRONBOUND_SHIELD}
+image="../../ffg/img/Item_IronboundShield.png"
+traits=one_handed shield act2
+minfame=heroic
+maxfame=legendary
+gold=200
 
 [ItemIronboundGlaive]
-name="Ironbound Glaive"
-image="../ffg/img/Item_Ironbound Glaive.dds"
-act=2
-price=175
-traits=shop melee blade staff 2hand weapon
+name={ffg:ITEM_IRONBOUND_GLAIVE}
+image="../../ffg/img/Item_Ironbound Glaive.png"
+traits=melee two_handed blade staff act2
+minfame=celebrated
+maxfame=legendary
+gold=175
+
+[ItemShadowTome]
+name={ffg:ITEM_SHADOW_TOME}
+image="../../ffg/img/Item_Shadow Tome.png"
+traits=other book act2
+minfame=heroic
+maxfame=legendary
+gold=125
 
 [ItemNerekhallPlate]
-name="Nrekhall Plate"
-image="../ffg/img/Item_Nerekhall Plate.dds"
-act=2
-price=200
-traits=shop heavyarmor armor
+name={ffg:ITEM_NEREKHALL_PLATE}
+image="../../ffg/img/Item_Nerekhall Plate.png"
+traits=armor heavy_armor act2
+minfame=celebrated
+maxfame=legendary
+gold=200
 
-[ItemRat-ToothDagger]
-name="Rat-tooth Dagger"
-image="../ffg/img/Item_Rat-Tooth Dagger.dds"
-act=2
-price=175
-traits=shop melee blade exotic 1hand weapon
+[ItemRatToothDagger]
+name={ffg:ITEM_RAT_TOOTH_DAGGER}
+image="../../ffg/img/Item_Rat-Tooth Dagger.png"
+traits=melee one_handed blade exotic act2
+minfame=celebrated
+maxfame=legendary
+gold=175
 
 [ItemRuneOfBlades]
-name="Rune of Blades"
-image="../ffg/img/Item_Rune of Blades.dds"
-act=2
-price=150
-traits=shop ranged magic rune 2hand weapon
+name={ffg:ITEM_RUNE_OF_BLADES}
+image="../../ffg/img/Item_Rune of Blades.png"
+traits=ranged two_handed magic rune act2
+minfame=celebrated
+maxfame=legendary
+gold=150
 
 [ItemRepeatingCrossbow]
-name="Repeating Crossbow"
-image="../ffg/img/Item_Repeating Crossbow.dds"
-act=2
-price=200
-traits=shop ranged bow exotic 2hand weapon
+name={ffg:ITEM_REPEATING_CROSSBOW}
+image="../../ffg/img/Item_Repeating Crossbow.png"
+traits=ranged two_handed bow exotic act2
+minfame=heroic
+maxfame=legendary
+gold=200
 
 [ItemGoldenMask]
-name="Golden Mask"
-image="../ffg/img/Item_Golden Mask.dds"
-act=2
-price=75
-traits=shop helmet other
+name={ffg:ITEM_GOLDEN_MASK}
+image="../../ffg/img/Item_Golden Mask.png"
+traits=other helmet act2
+minfame=impressive
+maxfame=legendary
+gold=75
 
 [ItemVestmentsOfKellos]
-name="Vestments of Kellos"
-image="../ffg/img/Item_Vestments of Kellos.dds"
-act=2
-price=200
-traits=shop lightarmor armor
+name={ffg:ITEM_VESTMENTS_OF_KELLOS}
+image="../../ffg/img/Item_Vestments of Kellos.png"
+traits=armor light_armor act2
+minfame=impressive
+maxfame=legendary
+gold=200
 
 [ItemStarOfKellos]
-name="Star of Kellos"
-image="../ffg/img/Item_Star of Kellos.dds"
-act=2
-price=175
-traits=shop trinket other
+name={ffg:ITEM_STAR_OF_KELLOS}
+image="../../ffg/img/Item_Star of Kellos.png"
+traits=other trinket act2
+minfame=heroic
+maxfame=legendary
+gold=175
 
-[ItemSpiritedScythe]
-name="Spirited Scythe"
-image="../ffg/img/Item_Spirited Scythe.dds"
-traits=relic melee blade staff 2hand weapon
+[RelicShadowPlotter]
+name={ffg:RELIC_SHADOW_PLOTTER}
+image="../../ffg/img/Item_Shadow Plotter.png"
+traits=trinket relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
 
-[ItemShadowPlotter]
-name="Shadow Plotter"
-image="../ffg/img/Item_Shadow Plotter.dds"
-traits=relic trinket other
+[RelicYnfernalRune]
+name={ffg:RELIC_YNFERNAL_RUNE}
+image="../../ffg/img/Item_Ynfernael Rune.png"
+traits=magic rune relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
 
-[ItemYnfernalRune]
-name="YnfernalRune"
-image="../ffg/img/Item_Ynfernael Rune.dds"
-traits=relic ranged magic rune 2hand weapon
+[RelicSpiritedScythe]
+name={ffg:RELIC_SPIRITED_SCYTHE}
+image="../../ffg/img/Item_Spirited Scythe.png"
+traits=blade staff relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
