--- a/content/D2E/boxed/tt/items.ini
+++ b/content/D2E/boxed/tt/items.ini
@@ -1,125 +1,152 @@
-[ItemBlackWidowsWeb]
-name="Black Widow's Web"
-image="../ffg/img/Item_Black Widow's Web.dds"
-traits=starting ranged exotic 1hand weapon
-
-[ItemHuntingKnife]
-name="Hunting Knife"
-image="../ffg/img/Item_Class_Hunting Knife.dds"
-traits=starting melee blade 1hand weapon
-
 [ItemIronFlail]
-name="Iron Flail"
-image="../ffg/img/Item_Iron Flail.dds"
-traits=starting melee hammer exotic 1hand weapon
+name={ffg:ITEM_IRON_FLAIL}
+image="../../ffg/img/Item_Iron Flail.png"
+traits=hammer exotic class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemSagesTome]
-name="Sage's Tome"
-image="../ffg/img/Item_Sage's Tome.dds"
-traits=starting book other
+name={ffg:ITEM_SAGES_TOME}
+image="../../ffg/img/Item_Sage's Tome.png"
+traits=class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
-[ItemBeltOfAlchemy]
-name="Belt of Alchemy"
-image="../ffg/img/Item_Belt of Alchemy.dds"
-act=1
-price=25
-traits=shop belt other
+[ItemBlackWidowsWeb]
+name={ffg:ITEM_BLACK_WIDOWS_WEB}
+image="../../ffg/img/Item_Black Widow's Web.png"
+traits=exotic class
+minfame=insignificant
+maxfame=insignificant
+gold=25
+
+[ItemHuntingKnife]
+name={ffg:ITEM_HUNTING_KNIFE}
+image="../../ffg/img/Item_Class_Hunting Knife.png"
+traits=blade class
+minfame=insignificant
+maxfame=insignificant
+gold=25
 
 [ItemBeltOfWaterwalking]
-name="Belt of Waterwalking"
-image="../ffg/img/Item_Belt of Waterwalking.dds"
-act=1
-price=50
-traits=shop belt other
+name={ffg:ITEM_BELT_OF_WATERWALKING}
+image="../../ffg/img/Item_Belt of Waterwalking.png"
+traits=other belt act1
+minfame=insignificant
+maxfame=impressive
+gold=50
+
+[ItemBeltOfAlchemy]
+name={ffg:ITEM_BELT_OF_ALCHEMY}
+image="../../ffg/img/Item_Belt of Alchemy.png"
+traits=other belt act1
+minfame=insignificant
+maxfame=impressive
+gold=25
+
+[ItemLifedrainSepter]
+name={ffg:ITEM_LIFEDRAIN_SEPTER}
+image="../../ffg/img/Item_Lifedrain Scepter.png"
+traits=ranged one_handed magic wand act1
+minfame=noteworthy
+maxfame=impressive
+gold=100
 
 [ItemDireFlail]
-name="Dire Flail"
-image="../ffg/img/Item_Dire Flail.dds"
-act=1
-price=150
-traits=shop melee hammer exotic 2hand weapon
+name={ffg:ITEM_DIRE_FLAIL}
+image="../../ffg/img/Item_Dire Flail.png"
+traits=melee two_handed hammer exotic act1
+minfame=noteworthy
+maxfame=celebrated
+gold=150
 
-[ItemDeflectingShield]
-name="Deflecting Shield"
-image="../ffg/img/Item_Deflecting Shield.dds"
-act=1
-price=50
-traits=shop shield 1hand
+[ItemTrident]
+name={ffg:ITEM_TRIDENT}
+image="../../ffg/img/Item_Trident.png"
+traits=melee one_handed exotic act1
+minfame=noteworthy
+maxfame=celebrated
+gold=125
 
 [ItemGuardianAxe]
-name="Guardian Axe"
-image="../ffg/img/Item_Guardian Axe.dds"
-act=1
-price=175
-traits=shop melee axe 2hand weapon
+name={ffg:ITEM_GUARDIAN_AXE}
+image="../../ffg/img/Item_Guardian Axe.png"
+traits=melee two_handed axe act1
+minfame=insignificant
+maxfame=impressive
+gold=175
 
-[ItemLifedrainScepter]
-name="Lifedrain Scepter"
-image="../ffg/img/Item_Lifedrain Scepter.dds"
-act=1
-price=100
-traits=shop ranged magic wand 1hand weapon
-
-[ItemMapstone]
-name="Mapstone"
-image="../ffg/img/Item_Mapstone.dds"
-act=1
-price=50
-traits=shop trinket other
-
-[ItemTriden]
-name="Trident"
-image="../ffg/img/Item_Trident.dds"
-act=1
-price=125
-traits=shop melee exotic 1hand weapon
-
-[ItemBeltOfStrength]
-name="Belt of Strength"
-image="../ffg/img/Item_Belt of Strength.dds"
-act=2
-price=125
-traits=shop belt other
-
-[ItemBlastingRune]
-name="Blasting Rune"
-image="../ffg/img/Item_Blasting Rune.dds"
-act=2
-price=200
-traits=shop ranged magic rune 2hand weapon
+[ItemDeflectingShield]
+name={ffg:ITEM_DEFLECTING_SHIELD}
+image="../../ffg/img/Item_Deflecting Shield.png"
+traits=one_handed shield act1
+minfame=insignificant
+maxfame=impressive
+gold=50
 
 [ItemBoomerang]
-name="Boomerang"
-image="../ffg/img/Item_Boomerang.dds"
-act=2
-price=200
-traits=shop ranged exotic 1hand weapon
-
-[ItemGlaive]
-name="Glaive"
-image="../ffg/img/Item_Glaive.dds"
-act=2
-price=175
-traits=shop melee exotic blade 2hand weapon
+name={ffg:ITEM_BOOMERANG}
+image="../../ffg/img/Item_Boomerang.png"
+traits=ranged one_handed exotic act2
+minfame=celebrated
+maxfame=legendary
+gold=200
 
 [ItemStoneArmor]
-name="Stone Armor"
-image="../ffg/img/Item_Stone Armor.dds"
-act=2
-price=225
-traits=shop heavyarmor armor
+name={ffg:ITEM_STONE_ARMOR}
+image="../../ffg/img/Item_Stone Armor.png"
+traits=armor heavy_armor act2
+minfame=heroic
+maxfame=legendary
+gold=225
 
-[ItemImmunityElixir]
-name="Immunity Elixir"
-image="../ffg/img/Item_Immunity Elixir.dds"
-traits=relic trinket other
+[ItemBeltOfStrength]
+name={ffg:ITEM_BELT_OF_STRENGTH}
+image="../../ffg/img/Item_Belt of Strength.png"
+traits=other belt act2
+minfame=impressive
+maxfame=heroic
+gold=100
 
-[ItemMendingTalisman]
-name="Mending Talisman"
-image="../ffg/img/Item_Mending Talisman.dds"
-traits=relic trinket other
+[ItemBlastingRune]
+name={ffg:ITEM_BLASTING_RUNE}
+image="../../ffg/img/Item_Blasting Rune.png"
+traits=ranged two_handed magic rune act2
+minfame=celebrated
+maxfame=legendary
+gold=200
 
-[ItemWorkmansRing]
-name="Workman's Ring'"
-image="../ffg/img/Item_Workman's Ring.dds"
-traits=relic trinket other
+[ItemGlaive]
+name={ffg:ITEM_GLAIVE}
+image="../../ffg/img/Item_Glaive.png"
+traits=melee two_handed blade exotic act2
+minfame=celebrated
+maxfame=legendary
+gold=175
+
+[RelicImmunityElixir]
+name={ffg:RELIC_IMMUNITY_ELIXIR}
+image="../../ffg/img/Item_Immunity Elixir.png"
+traits=trinket relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicMendingTalisman]
+name={ffg:RELIC_MENDING_TALISMAN}
+image="../../ffg/img/Item_Mending Talisman.png"
+traits=trinket relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
+[RelicWorkmansRing]
+name={ffg:RELIC_WORKMANS_RING}
+image="../../ffg/img/Item_Workman's Ring.png"
+traits=trinket relic
+minfame=insignificant
+maxfame=insignificant
+gold=0
+
