--- a/content/D2E/boxed/lotw/items.ini
+++ b/content/D2E/boxed/lotw/items.ini
@@ -1,7 +1,6 @@
-
 [ItemStasisRune]
 name={ffg:ITEM_STASIS_RUNE}
-image="../../ffg/img/Item_Stasis Rune.png"
+image="../../ffg/img/Item_Stasis Rune.dds"
 traits=magic rune class
 minfame=insignificant
 maxfame=insignificant
@@ -9,7 +8,7 @@ gold=25
 
 [ItemWornGreatsword]
 name={ffg:ITEM_WORN_GREATSWORD}
-image="../../ffg/img/Item_Worn Greatsword.png"
+image="../../ffg/img/Item_Worn Greatsword.dds"
 traits=blade class
 minfame=insignificant
 maxfame=insignificant
@@ -17,7 +16,7 @@ gold=25
 
 [ItemHornOfCourage]
 name={ffg:ITEM_HORN_OF_COURAGE}
-image="../../ffg/img/Item_Horn of Courage.png"
+image="../../ffg/img/Item_Horn of Courage.dds"
 traits=trinket class
 minfame=insignificant
 maxfame=insignificant
@@ -25,7 +24,7 @@ gold=25
 
 [ItemScalemail]
 name={ffg:ITEM_SCALEMAIL}
-image="../../ffg/img/Item_Scalemail.png"
+image="../../ffg/img/Item_Scalemail.dds"
 traits=armor heavy_armor act2
 minfame=celebrated
 maxfame=legendary
@@ -33,7 +32,7 @@ gold=225
 
 [ItemMercifulBoots]
 name={ffg:ITEM_MERCIFUL_BOOTS}
-image="../../ffg/img/Item_Merciful Boots.png"
+image="../../ffg/img/Item_Merciful Boots.dds"
 traits=other boots act2
 minfame=impressive
 maxfame=legendary
@@ -41,7 +40,7 @@ gold=75
 
 [ItemBowOfTheSky]
 name={ffg:ITEM_BOW_OF_THE_SKY}
-image="../../ffg/img/Item_Bow of the Sky.png"
+image="../../ffg/img/Item_Bow of the Sky.dds"
 traits=ranged two_handed bow act2
 minfame=celebrated
 maxfame=legendary
@@ -49,7 +48,7 @@ gold=200
 
 [ItemInscribedRobes]
 name={ffg:ITEM_INSCRIBED_ROBES}
-image="../../ffg/img/Item_Inscribed Robes.png"
+image="../../ffg/img/Item_Inscribed Robes.dds"
 traits=armor cloak act2
 minfame=celebrated
 maxfame=legendary
@@ -57,7 +56,7 @@ gold=225
 
 [ItemStaffOfKellos]
 name={ffg:ITEM_STAFF_OF_KELLOS}
-image="../../ffg/img/Item_Staff of Kellos.png"
+image="../../ffg/img/Item_Staff of Kellos.dds"
 traits=ranged two_handed staff magic act2
 minfame=celebrated
 maxfame=legendary
@@ -65,7 +64,7 @@ gold=175
 
 [ItemMagmaBlast]
 name={ffg:ITEM_MAGMA_BLAST}
-image="../../ffg/img/Item_Magma Blast.png"
+image="../../ffg/img/Item_Magma Blast.dds"
 traits=ranged two_handed magic rune act1
 minfame=noteworthy
 maxfame=celebrated
@@ -73,7 +72,7 @@ gold=150
 
 [ItemFlashPowder]
 name={ffg:ITEM_FLASH_POWDER}
-image="../../ffg/img/Item_Flash Powder.png"
+image="../../ffg/img/Item_Flash Powder.dds"
 traits=other trinket act1
 minfame=noteworthy
 maxfame=heroic
@@ -81,7 +80,7 @@ gold=100
 
 [ItemHandbow]
 name={ffg:ITEM_HANDBOW}
-image="../../ffg/img/Item_Handbow.png"
+image="../../ffg/img/Item_Handbow.dds"
 traits=ranged other bow exotic act1
 minfame=noteworthy
 maxfame=impressive
@@ -89,23 +88,23 @@ gold=125
 
 [ItemHalberd]
 name={ffg:ITEM_HALBERD}
-image="../../ffg/img/Item_Halberd.png"
+image="../../ffg/img/Item_Halberd.dds"
 traits=melee two_handed blade staff act1
 minfame=insignificant
 maxfame=impressive
 gold=125
 
-[RelicAuriumMail]
+[ItemAuriumMail]
 name={ffg:RELIC_AURIUM_MAIL}
-image="../../ffg/img/Item_Aurium Mail.png"
+image="../../ffg/img/Item_Aurium Mail.dds"
 traits=heavy_armor relic
 minfame=insignificant
 maxfame=insignificant
 gold=0
 
-[RelicValyndrasBane]
+[ItemValyndrasBane]
 name={ffg:RELIC_VALYNDRAS_BANE}
-image="../../ffg/img/Item_Valyndra's Bane.png"
+image="../../ffg/img/Item_Valyndra's Bane.dds"
 traits=blade relic
 minfame=insignificant
 maxfame=insignificant
