--- a/content/D2E/boxed/mob/items.ini
+++ b/content/D2E/boxed/mob/items.ini
@@ -1,6 +1,6 @@
 [ItemMistbane]
 name={ffg:ITEM_MISTBANE}
-image="../../ffg/img/Item_Mistbane.png"
+image="../../ffg/img/Item_Mistbane.dds"
 traits=melee one_handed blade act1
 minfame=noteworthy
 maxfame=impressive
@@ -8,7 +8,7 @@ gold=100
 
 [ItemCorpsebugBrooch]
 name={ffg:ITEM_CORPSEBUG_BROOCH}
-image="../../ffg/img/Item_Corpsebug Brooch.png"
+image="../../ffg/img/Item_Corpsebug Brooch.dds"
 traits=other trinket act1
 minfame=noteworthy
 maxfame=heroic
@@ -16,7 +16,7 @@ gold=75
 
 [ItemSoulstone]
 name={ffg:ITEM_SOULSTONE}
-image="../../ffg/img/Item_Soulstone.png"
+image="../../ffg/img/Item_Soulstone.dds"
 traits=ranged two_handed magic rune act1
 minfame=noteworthy
 maxfame=celebrated
@@ -24,7 +24,7 @@ gold=125
 
 [ItemBloodscriptRing]
 name={ffg:ITEM_BLOODSCRIPT_RING}
-image="../../ffg/img/Item_Bloodscript Ring.png"
+image="../../ffg/img/Item_Bloodscript Ring.dds"
 traits=other ring act1
 minfame=insignificant
 maxfame=celebrated
@@ -32,7 +32,7 @@ gold=75
 
 [ItemWitchHazelBow]
 name={ffg:ITEM_WITCH_HAZEL_BOW}
-image="../../ffg/img/Item_Witch Hazel Bow.png"
+image="../../ffg/img/Item_Witch Hazel Bow.dds"
 traits=ranged two_handed bow magic act1
 minfame=noteworthy
 maxfame=impressive
@@ -40,7 +40,7 @@ gold=125
 
 [ItemMarshCloak]
 name={ffg:ITEM_MARSH_CLOAK}
-image="../../ffg/img/Item_Marsh Cloak.png"
+image="../../ffg/img/Item_Marsh Cloak.dds"
 traits=armor cloak act1
 minfame=impressive
 maxfame=heroic
@@ -48,7 +48,7 @@ gold=150
 
 [ItemBattleTome]
 name={ffg:ITEM_BATTLE_TOME}
-image="../../ffg/img/Item_Battle Tome.png"
+image="../../ffg/img/Item_Battle Tome.dds"
 traits=ranged one_handed magic book act1
 minfame=noteworthy
 maxfame=celebrated
@@ -56,31 +56,31 @@ gold=125
 
 [ItemSoulboundSword]
 name={ffg:ITEM_SOULBOUND_SWORD}
-image="../../ffg/img/Item_Soulbound Sword.png"
+image="../../ffg/img/Item_Soulbound Sword.dds"
 traits=melee two_handed blade act1
 minfame=impressive
 maxfame=celebrated
 gold=100
 
-[RelicFearEater]
+[ItemFearEater]
 name={ffg:RELIC_FEAR_EATER}
-image="../../ffg/img/Item_Fear Eater.png"
+image="../../ffg/img/Item_Fear Eater.dds"
 traits=blade relic
 minfame=insignificant
 maxfame=insignificant
 gold=0
 
-[RelicUndertakersCoat]
+[ItemUndertakersCoat]
 name={ffg:RELIC_UNDERTAKERS_COAT}
-image="../../ffg/img/Item_Undertaker's Coat.png"
+image="../../ffg/img/Item_Undertaker's Coat.dds"
 traits=relic
 minfame=insignificant
 maxfame=insignificant
 gold=0
 
-[RelicTheWhiteCrown]
+[ItemTheWhiteCrown]
 name={ffg:RELIC_THE_WHITE_CROWN}
-image="../../ffg/img/Item_The White Crown.png"
+image="../../ffg/img/Item_The White Crown.dds"
 traits=helmet relic
 minfame=insignificant
 maxfame=insignificant
