--- a/content/D2E/boxed/son/classes.ini
+++ b/content/D2E/boxed/son/classes.ini
@@ -1,6 +1,6 @@
 [ClassSkirmisher]
 archetype=warrior
-items=ItemJadedHandaxe ItemRustedHandaxe
+items=ItemJaggedHandaxe ItemRustedHandaxe
 
 [SkillSkirmisherDualStrike]
 name="Dual Strike"
