--- a/content/D2E/boxed/son/items.ini
+++ b/content/D2E/boxed/son/items.ini
@@ -1,6 +1,6 @@
 [ItemTravelersBlade]
 name={ffg:ITEM_TRAVELERS_BLADE}
-image="../../ffg/img/Item_Traveler's Blade.png"
+image="../../ffg/img/Item_Traveler's Blade.dds"
 traits=blade class
 minfame=insignificant
 maxfame=insignificant
@@ -8,7 +8,7 @@ gold=25
 
 [ItemLute]
 name={ffg:ITEM_LUTE}
-image="../../ffg/img/Item_Lute.png"
+image="../../ffg/img/Item_Lute.dds"
 traits=trinket class
 minfame=insignificant
 maxfame=insignificant
@@ -16,7 +16,7 @@ gold=25
 
 [ItemPrismaticStaff]
 name={ffg:ITEM_PRISMATIC_STAFF}
-image="../../ffg/img/Item_Prismatic Staff.png"
+image="../../ffg/img/Item_Prismatic Staff.dds"
 traits=staff magic class
 minfame=insignificant
 maxfame=insignificant
@@ -24,7 +24,7 @@ gold=25
 
 [ItemFeatheredHatchet]
 name={ffg:ITEM_FEATHERED_HATCHET}
-image="../../ffg/img/Item_Feathered Hatchet.png"
+image="../../ffg/img/Item_Feathered Hatchet.dds"
 traits=axe exotic class
 minfame=insignificant
 maxfame=insignificant
@@ -32,7 +32,7 @@ gold=25
 
 [ItemTribalCloak]
 name={ffg:ITEM_TRIBAL_CLOAK}
-image="../../ffg/img/Item_Tribal Cloak.png"
+image="../../ffg/img/Item_Tribal Cloak.dds"
 traits=cloak class
 minfame=insignificant
 maxfame=insignificant
@@ -40,7 +40,7 @@ gold=25
 
 [ItemRustedHandaxe]
 name={ffg:ITEM_RUSTED_HANDAXE}
-image="../../ffg/img/Item_Rusted Handaxe.png"
+image="../../ffg/img/Item_Rusted Handaxe.dds"
 traits=axe class
 minfame=insignificant
 maxfame=insignificant
@@ -48,7 +48,7 @@ gold=25
 
 [ItemJaggedHandaxe]
 name={ffg:ITEM_JAGGED_HANDAXE}
-image="../../ffg/img/Item_Jagged Handaxe.png"
+image="../../ffg/img/Item_Jagged Handaxe.dds"
 traits=axe class
 minfame=insignificant
 maxfame=insignificant
@@ -56,7 +56,7 @@ gold=25
 
 [ItemIncendiaryArrows]
 name={ffg:ITEM_INCENDIARY_ARROWS}
-image="../../ffg/img/Item_Incendiary Arrows.png"
+image="../../ffg/img/Item_Incendiary Arrows.dds"
 traits=other trinket act1
 minfame=noteworthy
 maxfame=celebrated
@@ -64,7 +64,7 @@ gold=50
 
 [ItemIronboundRune]
 name={ffg:ITEM_IRONBOUND_RUNE}
-image="../../ffg/img/Item_Ironbound Rune.png"
+image="../../ffg/img/Item_Ironbound Rune.dds"
 traits=ranged two_handed magic rune act1
 minfame=insignificant
 maxfame=impressive
@@ -72,7 +72,7 @@ gold=175
 
 [ItemBootsOfIron]
 name={ffg:ITEM_BOOTS_OF_IRON}
-image="../../ffg/img/Item_Boots of Iron.png"
+image="../../ffg/img/Item_Boots of Iron.dds"
 traits=other boots act1
 minfame=insignificant
 maxfame=impressive
@@ -80,7 +80,7 @@ gold=50
 
 [ItemBaronsCloak]
 name={ffg:ITEM_BARONS_CLOAK}
-image="../../ffg/img/Item_Baron's Cloak.png"
+image="../../ffg/img/Item_Baron's Cloak.dds"
 traits=armor cloak act1
 minfame=noteworthy
 maxfame=celebrated
@@ -88,7 +88,7 @@ gold=125
 
 [ItemJeweledMace]
 name={ffg:ITEM_JEWELED_MACE}
-image="../../ffg/img/Item_Jeweled Mace.png"
+image="../../ffg/img/Item_Jeweled Mace.dds"
 traits=melee one_handed hammer act1
 minfame=insignificant
 maxfame=impressive
@@ -96,7 +96,7 @@ gold=100
 
 [ItemPhoenixPendant]
 name={ffg:ITEM_PHOENIX_PENDANT}
-image="../../ffg/img/Item_Phoenix Pendant.png"
+image="../../ffg/img/Item_Phoenix Pendant.dds"
 traits=other trinket act1
 minfame=insignificant
 maxfame=celebrated
@@ -104,7 +104,7 @@ gold=50
 
 [ItemBloodyDagger]
 name={ffg:ITEM_BLOODY_DAGGER}
-image="../../ffg/img/Item_Bloody Dagger.png"
+image="../../ffg/img/Item_Bloody Dagger.dds"
 traits=melee one_handed blade act1
 minfame=noteworthy
 maxfame=celebrated
@@ -112,7 +112,7 @@ gold=75
 
 [ItemBoneBlade]
 name={ffg:ITEM_BONE_BLADE}
-image="../../ffg/img/Item_Bone Blade.png"
+image="../../ffg/img/Item_Bone Blade.dds"
 traits=melee one_handed blade act1
 minfame=noteworthy
 maxfame=celebrated
@@ -120,7 +120,7 @@ gold=125
 
 [ItemCityGuardsBow]
 name={ffg:ITEM_CITY_GUARDS_BOW}
-image="../../ffg/img/Item_City Guard's Bow.png"
+image="../../ffg/img/Item_City Guard's Bow.dds"
 traits=ranged two_handed bow act1
 minfame=insignificant
 maxfame=impressive
@@ -128,7 +128,7 @@ gold=75
 
 [ItemCloakOfMists]
 name={ffg:ITEM_CLOAK_OF_MISTS}
-image="../../ffg/img/Item_Cloak of Mists.png"
+image="../../ffg/img/Item_Cloak of Mists.dds"
 traits=armor cloak act1
 minfame=impressive
 maxfame=heroic
@@ -136,7 +136,7 @@ gold=100
 
 [ItemIronboundShield]
 name={ffg:ITEM_IRONBOUND_SHIELD}
-image="../../ffg/img/Item_IronboundShield.png"
+image="../../ffg/img/Item_IronboundShield.dds"
 traits=one_handed shield act2
 minfame=heroic
 maxfame=legendary
@@ -144,7 +144,7 @@ gold=200
 
 [ItemIronboundGlaive]
 name={ffg:ITEM_IRONBOUND_GLAIVE}
-image="../../ffg/img/Item_Ironbound Glaive.png"
+image="../../ffg/img/Item_Ironbound Glaive.dds"
 traits=melee two_handed blade staff act2
 minfame=celebrated
 maxfame=legendary
@@ -152,7 +152,7 @@ gold=175
 
 [ItemShadowTome]
 name={ffg:ITEM_SHADOW_TOME}
-image="../../ffg/img/Item_Shadow Tome.png"
+image="../../ffg/img/Item_Shadow Tome.dds"
 traits=other book act2
 minfame=heroic
 maxfame=legendary
@@ -160,7 +160,7 @@ gold=125
 
 [ItemNerekhallPlate]
 name={ffg:ITEM_NEREKHALL_PLATE}
-image="../../ffg/img/Item_Nerekhall Plate.png"
+image="../../ffg/img/Item_Nerekhall Plate.dds"
 traits=armor heavy_armor act2
 minfame=celebrated
 maxfame=legendary
@@ -168,7 +168,7 @@ gold=200
 
 [ItemRatToothDagger]
 name={ffg:ITEM_RAT_TOOTH_DAGGER}
-image="../../ffg/img/Item_Rat-Tooth Dagger.png"
+image="../../ffg/img/Item_Rat-Tooth Dagger.dds"
 traits=melee one_handed blade exotic act2
 minfame=celebrated
 maxfame=legendary
@@ -176,7 +176,7 @@ gold=175
 
 [ItemRuneOfBlades]
 name={ffg:ITEM_RUNE_OF_BLADES}
-image="../../ffg/img/Item_Rune of Blades.png"
+image="../../ffg/img/Item_Rune of Blades.dds"
 traits=ranged two_handed magic rune act2
 minfame=celebrated
 maxfame=legendary
@@ -184,7 +184,7 @@ gold=150
 
 [ItemRepeatingCrossbow]
 name={ffg:ITEM_REPEATING_CROSSBOW}
-image="../../ffg/img/Item_Repeating Crossbow.png"
+image="../../ffg/img/Item_Repeating Crossbow.dds"
 traits=ranged two_handed bow exotic act2
 minfame=heroic
 maxfame=legendary
@@ -192,7 +192,7 @@ gold=200
 
 [ItemGoldenMask]
 name={ffg:ITEM_GOLDEN_MASK}
-image="../../ffg/img/Item_Golden Mask.png"
+image="../../ffg/img/Item_Golden Mask.dds"
 traits=other helmet act2
 minfame=impressive
 maxfame=legendary
@@ -200,7 +200,7 @@ gold=75
 
 [ItemVestmentsOfKellos]
 name={ffg:ITEM_VESTMENTS_OF_KELLOS}
-image="../../ffg/img/Item_Vestments of Kellos.png"
+image="../../ffg/img/Item_Vestments of Kellos.dds"
 traits=armor light_armor act2
 minfame=impressive
 maxfame=legendary
@@ -208,31 +208,31 @@ gold=200
 
 [ItemStarOfKellos]
 name={ffg:ITEM_STAR_OF_KELLOS}
-image="../../ffg/img/Item_Star of Kellos.png"
+image="../../ffg/img/Item_Star of Kellos.dds"
 traits=other trinket act2
 minfame=heroic
 maxfame=legendary
 gold=175
 
-[RelicShadowPlotter]
+[ItemShadowPlotter]
 name={ffg:RELIC_SHADOW_PLOTTER}
-image="../../ffg/img/Item_Shadow Plotter.png"
+image="../../ffg/img/Item_Shadow Plotter.dds"
 traits=trinket relic
 minfame=insignificant
 maxfame=insignificant
 gold=0
 
-[RelicYnfernalRune]
+[ItemYnfernalRune]
 name={ffg:RELIC_YNFERNAL_RUNE}
-image="../../ffg/img/Item_Ynfernael Rune.png"
+image="../../ffg/img/Item_Ynfernael Rune.dds"
 traits=magic rune relic
 minfame=insignificant
 maxfame=insignificant
 gold=0
 
-[RelicSpiritedScythe]
+[ItemSpiritedScythe]
 name={ffg:RELIC_SPIRITED_SCYTHE}
-image="../../ffg/img/Item_Spirited Scythe.png"
+image="../../ffg/img/Item_Spirited Scythe.dds"
 traits=blade staff relic
 minfame=insignificant
 maxfame=insignificant
