--- a/content/D2E/boxed/tctr/items.ini
+++ b/content/D2E/boxed/tctr/items.ini
@@ -1,6 +1,6 @@
 [ItemBlessedArmor]
 name={ffg:ITEM_BLESSED_ARMOR}
-image="../../ffg/img/Item_Blessed Armor.png"
+image="../../ffg/img/Item_Blessed Armor.dds"
 traits=armor heavy_armor act1
 minfame=celebrated
 maxfame=legendary
@@ -8,7 +8,7 @@ gold=250
 
 [ItemBloodthirstyBracers]
 name={ffg:ITEM_BLOODTHIRSTY_BRACERS}
-image="../../ffg/img/Item_Bloodthirsty Bracers.png"
+image="../../ffg/img/Item_Bloodthirsty Bracers.dds"
 traits=other trinket act2
 minfame=impressive
 maxfame=legendary
@@ -16,7 +16,7 @@ gold=125
 
 [ItemBoneWand]
 name={ffg:ITEM_BONE_WAND}
-image="../../ffg/img/Item_Bone Wand.png"
+image="../../ffg/img/Item_Bone Wand.dds"
 traits=magic wand act2
 minfame=celebrated
 maxfame=heroic
@@ -24,7 +24,7 @@ gold=200
 
 [ItemFistsOfIron]
 name={ffg:ITEM_FISTS_OF_IRON}
-image="../../ffg/img/Item_Fists of Iron.png"
+image="../../ffg/img/Item_Fists of Iron.dds"
 traits=exotic act2
 minfame=celebrated
 maxfame=legendary
@@ -32,7 +32,7 @@ gold=125
 
 [ItemHornedShield]
 name={ffg:ITEM_HORNED_SHIELD}
-image="../../ffg/img/Item_Horned Shield.png"
+image="../../ffg/img/Item_Horned Shield.dds"
 traits=one_handed shield act2
 minfame=celebrated
 maxfame=legendary
@@ -40,7 +40,7 @@ gold=150
 
 [ItemLightningJavelin]
 name={ffg:ITEM_LIGHTNING_JAVELIN}
-image="../../ffg/img/Item_Lightning Javelin.png"
+image="../../ffg/img/Item_Lightning Javelin.dds"
 traits=magic exotic act2
 minfame=celebrated
 maxfame=legendary
@@ -48,7 +48,7 @@ gold=200
 
 [ItemMaskOfHorrors]
 name={ffg:ITEM_MASK_OF_HORRORS}
-image="../../ffg/img/Item_Mask of Horrors.png"
+image="../../ffg/img/Item_Mask of Horrors.dds"
 traits=other helmet act2
 minfame=impressive
 maxfame=heroic
@@ -56,7 +56,7 @@ gold=75
 
 [ItemRunetouchedLeather]
 name={ffg:ITEM_RUNETOUCHED_LEATHER}
-image="../../ffg/img/Item_Rune-Touched Armor.png"
+image="../../ffg/img/Item_Rune-Touched Armor.dds"
 traits=armor light_armor act2
 minfame=noteworthy
 maxfame=celebrated
@@ -64,31 +64,31 @@ gold=150
 
 [ItemSashOfTheSlayer]
 name={ffg:ITEM_SASH_OF_THE_SLAYER}
-image="../../ffg/img/Item_Sash of the Slayer.png"
+image="../../ffg/img/Item_Sash of the Slayer.dds"
 traits=other belt act2
 minfame=impressive
 maxfame=legendary
 gold=75
 
-[RelicRobesOfTheLast]
+[ItemRobesOfTheLast]
 name={ffg:RELIC_ROBES_OF_THE_LAST}
-image="../../ffg/img/Item_Robes of the Last.png"
+image="../../ffg/img/Item_Robes of the Last.dds"
 traits=armor cloak relic
 minfame=insignificant
 maxfame=insignificant
 gold=0
 
-[RelicBonebornBow]
+[ItemBonebornBow]
 name={ffg:RELIC_BONEBORN_BOW}
-image="../../ffg/img/Item_Boneborn Bow.png"
+image="../../ffg/img/Item_Boneborn Bow.dds"
 traits=ranged two_handed bow relic
 minfame=insignificant
 maxfame=insignificant
 gold=0
 
-[RelicForewarnedRing]
+[ItemForewarnedRing]
 name={ffg:RELIC_FOREWARNED_RING}
-image="../../ffg/img/Item_Forewarned Ring.png"
+image="../../ffg/img/Item_Forewarned Ring.dds"
 traits=other relic
 minfame=insignificant
 maxfame=insignificant
